# fuzip

./: Cargo.toml  Justfile  README.md
src/: cli.rs  main.rs  two.rs
