[package]
name = "fuzip"
description = "Fuzzy zipping for scripting"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/fuzip"

[dependencies]
anyhow = "1"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    "std",
    "help",
    "usage",
    "wrap_help",
    "derive",
    "deprecated",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
